# wgpu-robotic-simulator

./: Cargo.toml  README.md  index.html
assets/: 04-materials.urdf  LittleDog.urdf  leg.urdf  racecar.urdf  xarm.urdf
assets/mesh/: a.out  stl.stl
assets/meshes/: blender_monkey.stl  cylinder.cpp  leg_project - connector-2.STL  leg_project - distal-1.STL  leg_project - parallel_link-1.STL  leg_project - proximal_inner-1.STL  leg_project - proximal_outer-1.STL
examples/: mesh_parse.rs  particles.rs  pixelsort.rs  sdl_gl_triangle.rs  serial.rs  ssh_beagle.rs  stl_parse.rs  third_dimension.rs  urdf_arm.rs  urdf_dog.rs  urdf_parse.rs  wgpu_triangle.rs
shaders/: frag.glsl  light.wgsl  phong.glsl  shader.wgsl  shader2.wgsl  vert.glsl  vert.wgsl
src/: .wgpu_program.rs.rustfmt  bindings.rs  camera.rs  codegen.rs  geometry.rs  geomety.rs  graphics.rs  lib.rs  light.rs  main.rs  mechanism.rs  opengl_program.rs  physics.rs  shader.rs  texture.rs  urdf.rs  util.rs  wgpu_program.rs
src/example/: mod.rs  particles.rs  sdl_gl_triangle.rs  third_dimension.rs  wgpu_triangle.rs
