[package]
name = "wgpu-robotic-simulator"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "prog"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
bytemuck = "1.14.0"
env_logger = "0.11.0"
futures = "0.3.28"
itertools = "0.13.0"
log = "0.4.20"
mint = "0.5.9"
naga = "22.1.0"
nalgebra-glm = "0.19.0"
rand = "0.8.5"
wgpu = { version="22.1.0", features=["glsl", "webgl"] }
winit = "0.29.0"
xml-rs = "0.8.19"
anyhow = {version="1.0.75", features=["backtrace"]}
rayon = "1.8.0"
regex = "1.10.2"
image = { version = "0.25.2", features = ["png", "jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.14.0"
sdl2 = "0.35.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
